# RainstormFramework

./: .gitignore  CMakeLists.txt  README.md  test_main.cpp
assets/shaders/: fragment.glsl  fragmentTex.glsl  light_vertex.glsl
config/: settings.cfg
shaders/: fragment.glsl  fragmentTex.glsl  light_fragment.glsl  light_vertex.glsl  vertex.glsl  vertexTex.glsl
src/: REngine.h  a.out  debug.h  debug.hpp  test_main.cpp
src/components/: camera.cpp  camera.h  componentList.h  control.cpp  control.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  transform.h
src/core/: engine.cpp  engine.h
src/core/ECSCore/: componentManager.h  entity.h
src/core/ECcore/: component.h  ecManager.cpp  ecManager.h  entity.cpp  entity.h
src/core/OCcore/: component.h  object.cpp  object.h  ocManager.cpp  ocManager.h
src/core/containers/: ringBuffer.h
src/core/systems/: configSystem.cpp  configSystem.h  graphics.cpp  graphics.h  inputManager.cpp  inputManager.h  jobManager.cpp  jobManager.h  jobSystem.cpp  jobSystem.h  shader.cpp  shader.h  texture.cpp  texture.h
src/core/utilities/: includes.h  jobSystem.cpp
src/debug/: debug.cpp  debug.h
src/error/: error.h
src/math/: math.h
src/utilities/: includes.h  utility.cpp  utility.h
